修复 InterfaceMongodbRepositoryImplementer